# kafkanator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  db_keeper.cpp  make_db.cpp  make_db.h  mapping_db.cpp  mapping_db.h  photo_db.cpp  photo_db.h  quotation_db.cpp  quotation_db.h  survey.cpp  test_main.cpp
